@@ -378,11 +378,15 @@ class InitHandler(commands.Cog):
     @init.command()
     @commands.has_permissions(administrator=True)
     async def help(self, ctx):
-        # todo: add help command
-        await self.discord_helper.sendEmbed(ctx.channel, "Help", f"To get help on this command use `.taco help init`.", delete_after=20)
+        guild_id = 0
         if ctx.guild:
-            # only delete if in guild channel
+            guild_id = ctx.guild.id
             await ctx.message.delete()
+        await self.discord_helper.sendEmbed(ctx.channel,
+            self.settings.get_string(guild_id, "help_title", bot_name=self.settings.name),
+            self.settings.get_string(guild_id, "help_module_message", bot_name=self.settings.name, command="init"),
+            footer=self.settings.get_string(guild_id, "embed_delete_footer", seconds=30),
+            color=0xff0000, delete_after=30)
         pass
 
 def setup(bot):
