@@ -50,11 +50,15 @@ class Tacos(commands.Cog):
 
     @tacos.command()
     async def help(self, ctx):
-        # todo: add help command
-        await self.discord_helper.sendEmbed(ctx.channel, "Help", f"Use `.taco help tacos` for help on this topic.", delete_after=self.SELF_DESTRUCT_TIMEOUT)
-        # only delete if the message is in a guild channel
+        guild_id = 0
         if ctx.guild:
+            guild_id = ctx.guild.id
             await ctx.message.delete()
+        await self.discord_helper.sendEmbed(ctx.channel,
+            self.settings.get_string(guild_id, "help_title", bot_name=self.settings.name),
+            self.settings.get_string(guild_id, "help_module_message", command="tacos"),
+            footer=self.settings.get_string(guild_id, "embed_delete_footer", seconds=30),
+            color=0xff0000, delete_after=30)
 
     # create command called remove_all_tacos that asks for the user
     @tacos.command(aliases=['purge'])
